--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
+  "devDependencies": {
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.1",
+    "prop-types": "^15.6.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --coverage --watch",
+    "test_debug": "node --inspect --inspect-brk ./node_modules/.bin/jest --runInBand -watch", 
     "eject": "react-scripts eject"
   }
 }
