--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-brands-svg-icons": "^5.4.1",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "fuzzy-search": "^2.1.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
@@ -20,7 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --coverage --watch",
-    "test_debug": "node --inspect --inspect-brk ./node_modules/.bin/jest --runInBand -watch", 
+    "test_debug": "node --inspect --inspect-brk ./node_modules/.bin/jest --runInBand -watch",
     "eject": "react-scripts eject"
   }
 }
