--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
+    "jest-fetch-mock": "^1.6.6",
     "prop-types": "^15.6.2"
   },
   "scripts": {
@@ -28,5 +29,6 @@
     "test": "react-scripts test --env=jsdom --coverage --watch",
     "test_debug": "node --inspect --inspect-brk ./node_modules/.bin/jest --runInBand -watch",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://127.0.0.1:6543"
 }
